<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/browser_actions_title_color"
    tools:context=".Main2Activity">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"

        android:layout_centerHorizontal="true"
        android:background="#ffffff"
        tools:layout_editor_absoluteX="33dp"
        tools:layout_editor_absoluteY="150dp">


        <EditText
            android:id="@+id/editText2"
            android:layout_width="300dp"
            android:layout_height="41dp"

            android:layout_marginTop="8dp"
            android:background="@drawable/round_corner"
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="300dp"
            android:layout_height="41dp"
            android:layout_marginStart="8dp"

            android:layout_marginLeft="8dp"
            android:layout_marginTop="68dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/round_corner"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText2" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="wrap_content"
            android:layout_height="53dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/round_corner"
            android:ems="10"

            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText3" />

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:background="@color/design_default_color_primary"
            android:text="@string/register"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText3"
            app:layout_constraintVertical_bias="0.465" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="228dp"
            android:text="@string/email_id"
            android:textColor="@color/vpi__bright_foreground_disabled_holo_dark"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/editText2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/password"
            android:textColor="@color/vpi__bright_foreground_disabled_holo_dark"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/editText3"
            app:layout_constraintStart_toStartOf="@+id/editText3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="43dp"

            android:layout_marginStart="118dp"
            android:layout_marginLeft="118dp"

            android:layout_marginTop="104dp"
            android:layout_marginEnd="125dp"
            android:layout_marginRight="125dp"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="@color/vpi__bright_foreground_disabled_holo_dark"
            android:textSize="30sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

</RelativeLayout>